--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,4 +1,4 @@
-@import './@primer/index.css';
+@import './primer.css';
 @import './util.css';
 @import './timeline.css';
 @import './timeline-comment.css';
