--- a/src/stylesheets/main-beaudar.css
+++ b/src/stylesheets/main-beaudar.css
@@ -1,172 +1,11 @@
 @import './beaudar.css';
 @import './github-syntax.css';
 
-/* cover */
-@import './themes/classic-dark/cover.css';
-@import './themes/dark-blue/cover.css';
-@import './themes/github-dark/cover.css';
-@import './themes/github-dark-orange/cover.css';
-@import './themes/hugo-terminal-orange/cover.css';
-@import './themes/icy-dark/cover.css';
-@import './themes/photon-dark/cover.css';
-
-[theme='classic-dark'] {
-  --gray-000: #0d1117;
-  --gray-100: #222;
-  --gray-200: #24292e;
-  --gray-300: #343434;
-  --gray-400: #586069;
-  --gray-600: #7b7b7b;
-  --gray-700: #959da5;
-  --bg-white: #0d1117;
-  --bg-gray: #090d13;
-  --bg-gray-light: var(--bg-gray);
-  --border-gray: var(--gray-300);
-  --border-gray-dark: var(--border-gray);
-  --text-gray: #949494;
-  --text-gray-dark: #c9d1d9;
-  --text-blue: rgb(65, 131, 196);
-  --bg-blue-light: #182030;
-  --black-fade-15: rgba(#fff, 0.15);
-  --black-fade-30: rgba(#fff, 0.3);
-}
-
-[theme='dark-blue'] {
-  --gray-000: #181818;
-  --gray-100: #222;
-  --gray-200: #24292e;
-  --gray-300: #1d1f21;
-  --gray-400: #586069;
-  --gray-600: #7b7b7b;
-  --gray-700: #959da5;
-  --bg-white: #1e232b;
-  --bg-gray: var(--bg-white);
-  --bg-gray-light: var(--bg-gray);
-  --border-gray: #1d1f21;
-  --border-gray-dark: #1d1f21;
-  --text-gray: #949494;
-  --text-gray-dark: #c0c0c0;
-  --text-blue: rgb(65, 131, 196);
-  --bg-blue-light: #182030;
-  --black-fade-15: rgba(#fff, 0.15);
-  --black-fade-30: rgba(#fff, 0.3);
-}
-
-[theme='github-dark'] {
-  --gray-000: #181818;
-  --gray-100: #222;
-  --gray-200: #24292e;
-  --gray-300: #343434;
-  --gray-400: #586069;
-  --gray-600: #7b7b7b;
-  --gray-700: #959da5;
-  --bg-white: #181818;
-  --bg-gray: #202020;
-  --bg-gray-light: var(--bg-gray);
-  --border-gray: var(--gray-300);
-  --border-gray-dark: var(--border-gray);
-  --text-gray: #949494;
-  --text-gray-dark: #c0c0c0;
-  --text-blue: rgb(65, 131, 196);
-  --bg-blue-light: #182030;
-  --black-fade-15: rgba(#fff, 0.15);
-  --black-fade-30: rgba(#fff, 0.3);
-}
-
-[theme='github-dark-orange'] {
-  --gray-000: #181818;
-  --gray-100: #222222;
-  --gray-200: #24292e;
-  --gray-300: #4e4c4b;
-  --gray-400: #586069;
-  --gray-600: #bbbbbb;
-  --gray-700: #959da5;
-  --bg-white: #2d2833;
-  --bg-gray: var(--gray-100);
-  --bg-gray-light: var(--bg-gray);
-  --border-gray: var(--gray-300);
-  --border-gray-dark: var(--border-gray);
-  --black-fade-15: rgba(#fff, 0.15);
-  --black-fade-30: rgba(#fff, 0.3);
-  --text-gray: #c9c9c9;
-  --text-gray-dark: #f7f7f7;
-  --text-blue: #f27052;
-  --bg-blue-light: #212021;
-  --highlight: rgba(242, 112, 82, 0.99);
-  --line: #6f6e6e;
-}
-
-/* [theme='github-light'] {} */
-
-[theme='hugo-terminal-orange'] {
-  --orange: rgb(255, 168, 106);
-  --orange-200: #ffd1ac;
-  --gray-000: #181818;
-  --gray-100: #2b303b;
-  --gray-200: #24292e;
-  --gray-300: #4e4c4b;
-  --gray-400: #586069;
-  --gray-600: #bbbbbb;
-  --gray-700: #959da5;
-  --gray-900: #24292e;
-  --bg-white: #222129;
-  --bg-gray: var(--gray-100);
-  --bg-gray-light: var(--bg-gray);
-  --border-gray: var(--gray-300);
-  --border-gray-dark: var(--border-gray);
-  --black-fade-15: rgba(#fff, 0.15);
-  --black-fade-30: rgba(#fff, 0.3);
-  --text-gray: #c9c9c9;
-  --text-gray-dark: #f7f7f7;
-  --text-blue: var(--orange);
-  --bg-blue-light: #212021;
-  --bg-page: #222129;
-
-  --highlight: var(--orange);
-  --line: #6f6e6e;
-}
-
-[theme='icy-dark'] {
-  --gray-000: #021012;
-  --gray-100: #051a1d;
-  --gray-200: #0a3238;
-  --gray-300: #10444d;
-  --gray-400: #18606d;
-  --gray-600: #278a97;
-  --gray-700: #39a9b8;
-  --bg-white: #021012;
-  --bg-gray: #06272c;
-  --bg-gray-light: var(--bg-gray);
-  --border-gray: var(--gray-300);
-  --border-gray-dark: var(--border-gray);
-  --text-gray: #fff;
-  --text-gray-dark: #fff;
-  --text-blue: rgb(38, 208, 231);
-  --bg-blue-light: #182c30;
-  --black-fade-15: rgba(#fff, 0.15);
-  --black-fade-30: rgba(#fff, 0.3);
-}
-
-[theme='photon-dark'] {
-  --gray-000: #0c0c0d;
-  --gray-100: #0c0c0d;
-  --gray-200: #2a2a2e;
-  --gray-300: #38383d;
-  --gray-400: #4a4a4f;
-  --gray-600: #737373;
-  --gray-700: #b1b1b3;
-  --bg-white: var(--gray-200);
-  --bg-gray: var(--gray-200);
-  --bg-gray-light: var(--bg-gray);
-  --border-gray: var(--gray-300);
-  --border-gray-dark: var(--border-gray);
-  --text-gray: #ededf0;
-  --text-gray-dark: #d7d7db;
-  --text-blue: #45a1ff;
-  --bg-blue-light: #182030;
-  --black-fade-15: rgba(#fff, 0.15);
-  --black-fade-30: rgba(#fff, 0.3);
-  --button-normal: #0a84ff;
-  --button-hover: #003eaa;
-  --button-pressed: #002275;
-}
+/* themes */
+@import './themes/classic-dark.css';
+@import './themes/dark-blue.css';
+@import './themes/github-dark.css';
+@import './themes/github-dark-orange.css';
+@import './themes/hugo-terminal-orange.css';
+@import './themes/icy-dark.css';
+@import './themes/photon-dark.css';
