--- a/src/stylesheets/themes/hugo-terminal-orange.css
+++ b/src/stylesheets/themes/hugo-terminal-orange.css
@@ -1,3 +1,31 @@
+[theme='hugo-terminal-orange'] {
+  --orange: rgb(255, 168, 106);
+  --orange-200: #ffd1ac;
+  --gray-000: #181818;
+  --gray-100: #2b303b;
+  --gray-200: #24292e;
+  --gray-300: #4e4c4b;
+  --gray-400: #586069;
+  --gray-600: #bbbbbb;
+  --gray-700: #959da5;
+  --gray-900: #24292e;
+  --bg-white: #222129;
+  --bg-gray: var(--gray-100);
+  --bg-gray-light: var(--bg-gray);
+  --border-gray: var(--gray-300);
+  --border-gray-dark: var(--border-gray);
+  --black-fade-15: rgba(#fff, 0.15);
+  --black-fade-30: rgba(#fff, 0.3);
+  --text-gray: #c9c9c9;
+  --text-gray-dark: #f7f7f7;
+  --text-blue: var(--orange);
+  --bg-blue-light: #212021;
+  --bg-page: #222129;
+
+  --highlight: var(--orange);
+  --line: #6f6e6e;
+}
+
 [theme='hugo-terminal-orange'] .btn-primary {
   color: var(--text-gray-dark);
   border-color: var(--gray-900);
