--- a/src/stylesheets/primer.css
+++ b/src/stylesheets/primer.css
@@ -1,5 +1,7 @@
 /* ******************************** support ******************************** */
-:root {
+:root,
+::before,
+::after {
   /* variables
   Typography variables */
   --h00-size-mobile: 40px;
@@ -47,15 +49,20 @@
 
   /* Black based on same hue as --gray-900 */
   --black: #1b1f23;
+  --RGB_black: 27, 31, 35;
   --white: #fff;
+  --RGB_white: 255, 255, 255;
   /* -------- Grays -------- */
   --gray-000: #fafbfc;
   --gray-100: #f6f8fa;
   --gray-200: #e1e4e8;
+  --RGB_gray-200: 225, 228, 232;
   --gray-300: #d1d5da;
   --gray-400: #959da5;
+  --RGB_gray-400: 149, 157, 165;
   --gray-500: #6a737d;
   --gray-600: #586069;
+  --RGB_gray-600: 88, 96, 105;
   --gray-700: #444d56;
   --gray-800: #2f363d;
   --gray-900: #24292e;
@@ -65,12 +72,16 @@
   --blue-100: #dbedff;
   --blue-200: #c8e1ff;
   --blue-300: #79b8ff;
+  --RGB_blue-300: 121, 184, 255;
   --blue-400: #2188ff;
   --blue-500: #0366d6;
+  --RGB_blue-500: 3, 102, 214;
   --blue-600: #005cc5;
   --blue-700: #044289;
+  --RGB_blue-700: 4, 66, 137;
   --blue-800: #032f62;
   --blue-900: #05264c;
+  --RGB_blue-900: 5, 38, 76;
 
   /* -------- Green -------- */
   --green-000: #f0fff4;
@@ -81,8 +92,10 @@
   --green-500: #28a745;
   --green-600: #22863a;
   --green-700: #176f2c;
+  --RGB_green-700: 23, 111, 44;
   --green-800: #165c26;
   --green-900: #144620;
+  --RGB_green-900: 20, 70, 32;
 
   /* -------- Yellow -------- */
   --yellow-000: #fffdef;
@@ -94,6 +107,7 @@
   --yellow-600: #f9c513;
   --yellow-700: #dbab09;
   --yellow-800: #b08800;
+  --RGB_yellow-800: 176, 136, 0;
   --yellow-900: #735c0f;
 
   /* -------- Orange -------- */
@@ -116,9 +130,12 @@
   --red-400: #ea4a5a;
   --red-500: #d73a49;
   --red-600: #cb2431;
+  --RGB_red-600: 203, 36, 49;
   --red-700: #b31d28;
   --red-800: #9e1c23;
+  --RGB_red-800: 158, 28, 35;
   --red-900: #86181d;
+  --RGB_red-900: 134, 24, 29;
 
   /* -------- Purple -------- */
   --purple-000: #f5f0ff;
@@ -145,22 +162,23 @@
   --pink-900: #6d224f;
 
   /* -------- Fades -------- */
-  --black-fade-15: rgba(var(--black), 0.15);
-  --black-fade-30: rgba(var(--black), 0.3);
-  --black-fade-50: rgba(var(--black), 0.5);
-  --black-fade-70: rgba(var(--black), 0.7);
-  --black-fade-85: rgba(var(--black), 0.85);
+  --black-fade-15: rgba(var(--RGB_black), 0.15);
+  --black-fade-30: rgba(var(--RGB_black), 0.3);
+  --black-fade-50: rgba(var(--RGB_black), 0.5);
+  --black-fade-70: rgba(var(--RGB_black), 0.7);
+  --black-fade-85: rgba(var(--RGB_black), 0.85);
 
-  --white-fade-15: rgba(var(--white), 0.15);
-  --white-fade-30: rgba(var(--white), 0.3);
-  --white-fade-50: rgba(var(--white), 0.5);
-  --white-fade-70: rgba(var(--white), 0.7);
-  --white-fade-85: rgba(var(--white), 0.85);
+  --white-fade-15: rgba(var(--RGB_white), 0.15);
+  --white-fade-30: rgba(var(--RGB_white), 0.3);
+  --white-fade-50: rgba(var(--RGB_white), 0.5);
+  --white-fade-70: rgba(var(--RGB_white), 0.7);
+  --white-fade-85: rgba(var(--RGB_white), 0.85);
 
   /* -------- Color defaults -------- */
   --red: var(--red-500);
   --purple: var(--purple-500);
   --blue: var(--blue-500);
+  --RGB_blue: var(--RGB_blue-500);
   --green: var(--green-500);
   --yellow: var(--yellow-500);
   --orange: var(--orange-500);
@@ -177,7 +195,9 @@
   --border-gray-darker: var(--gray-700);
   --border-gray-light: var(--gray-200);
   --border-gray: var(--gray-200);
+  --RGB_border-gray: var(--RGB_gray-200);
   --border-blue: var(--blue-500);
+  --RGB_border-blue: var(--RGB_blue-500);
   --border-blue-light: var(--blue-200);
   --border-green: var(--green-400);
   --border-green-light: var(--green-300);
@@ -188,6 +208,7 @@
 
   /* Background colors */
   --bg-white: var(--white);
+  --RGB_bg-white: var(--RGB_white);
   --bg-black: var(--black);
   --bg-black-fade: var(--black-fade-50);
   --bg-blue-light: var(--blue-000);
@@ -210,6 +231,7 @@
   /* Text colors */
   --text-black: var(--black);
   --text-white: var(--white);
+  --RGB_text-white: var(--RGB_white);
   --text-blue: var(--blue-500);
   --text-gray-dark: var(--gray-900);
   --text-gray-light: var(--gray-500);
@@ -220,6 +242,7 @@
   --text-purple: var(--purple);
   --text-pink: var(--pink-500);
   --text-red: var(--red-600);
+  --RGB_text-red: var(--RGB_red-600);
   --text-yellow: var(--yellow-800);
   /* Layout variables */
 
@@ -291,6 +314,7 @@
   /* Border */
   --border-width: 1px;
   --border-color: var(--border-gray);
+  --RGB_border-color: var(--RGB_border-gray);
   --border-style: solid;
   --border: var(--border-width) var(--border-color) var(--border-style);
 
@@ -301,26 +325,26 @@
   --border-radius: var(--border-radius-2);
 
   /* Box shadow */
-  --box-shadow: 0 1px 0 rgba(var(--black), 0.04);
-  --box-shadow-medium: 0 3px 6px rgba(var(--gray-400), 0.15);
-  --box-shadow-large: 0 8px 24px rgba(var(--gray-400), 0.2);
-  --box-shadow-extra-large: 0 12px 48px rgba(var(--gray-400), 0.3);
+  --box-shadow: 0 1px 0 rgba(var(--RGB_black), 0.04);
+  --box-shadow-medium: 0 3px 6px rgba(var(--RGB_gray-400), 0.15);
+  --box-shadow-large: 0 8px 24px rgba(var(--RGB_gray-400), 0.2);
+  --box-shadow-extra-large: 0 12px 48px rgba(var(--RGB_gray-400), 0.3);
 
-  --box-shadow-highlight: inset 0 1px 0 rgba(var(--white), 0.25);
-  --box-shadow-inset: inset 0 1px 0 rgba(var(--border-color), 0.2);
-  --box-shadow-focus: 0 0 0 3px rgba(var(--border-blue), 0.3);
+  --box-shadow-highlight: inset 0 1px 0 rgba(var(--RGB_white), 0.25);
+  --box-shadow-inset: inset 0 1px 0 rgba(var(--RGB_border-color), 0.2);
+  --box-shadow-focus: 0 0 0 3px rgba(var(--RGB_border-blue), 0.3);
 
   /* Button variables */
   --border-color-button: var(--black-fade-15);
   --btn-active-shadow: inset 0 0.15em 0.3em var(--black-fade-15);
 
   /* Form variables */
-  --form-control-shadow: inset 0 1px 2px rgba(var(--black), 0.075);
-  --btn-input-focus-shadow: 0 0 0 0.2em rgba(var(--blue), 0.3);
+  --form-control-shadow: inset 0 1px 2px rgba(var(--RGB_black), 0.075);
+  --btn-input-focus-shadow: 0 0 0 0.2em rgba(var(--RGB_blue), 0.3);
 
   /* Tooltips */
   --tooltip-max-width: 250px;
-  --tooltip-background-color: var(--black);
+  --tooltip-background-color: var(--RGB_black);
   --tooltip-text-color: var(--white);
   --tooltip-delay: 0.4s;
   --tooltip-duration: 0.1s;
@@ -504,7 +528,7 @@ h1 {
 
 mark {
   background-color: #ff0;
-  color: --text-black;
+  color: var(--text-black);
 }
 
 /**
@@ -578,7 +602,7 @@ samp {
  */
 
 figure {
-  margin: 1em --spacer-6;
+  margin: 1em var(--spacer-6);
 }
 
 /**
@@ -618,7 +642,7 @@ textarea {
  */
 
 optgroup {
-  font-weight: --font-weight-bold;
+  font-weight: var(--font-weight-bold);
 }
 
 /**
@@ -1112,7 +1136,7 @@ Box shadows */
   color: inherit;
   text-shadow: none;
   vertical-align: top;
-  background-color: rgba(var(--black), 0.08);
+  background-color: rgba(var(--RGB_black), 0.08);
 }
 
 .btn .dropdown-caret {
@@ -1171,15 +1195,17 @@ Box shadows */
 
 .btn-primary {
   --bg-default: #2ea44f;
+  --RGB_bg-default: 46, 164, 79;
   --bg-hover: #2c974b;
   --bg-active: var(--bg-hover);
   --bg-disabled: #94d3a2;
   --shadow: var(--green-900);
-  --box-shadow: 0 1px 0 rgba(var(--black), 0.1),
-    inset 0 1px 0 rgba(var(--white), 0.03);
+  --RGB_shadow: var(--RGB_green-900);
+  --box-shadow: 0 1px 0 rgba(var(--RGB_black), 0.1),
+    inset 0 1px 0 rgba(var(--RGB_white), 0.03);
   color: var(--text-white);
   background-color: var(--bg-default);
-  border-color: rgba(var(--black), 0.15);
+  border-color: rgba(var(--RGB_black), 0.15);
   box-shadow: var(--box-shadow);
 }
 
@@ -1193,30 +1219,30 @@ Box shadows */
 .btn-primary.selected,
 .btn-primary[aria-selected='true'] {
   background-color: var(--bg-active);
-  box-shadow: inset 0 1px 0 rgba(var(--shadow), 0.2);
+  box-shadow: inset 0 1px 0 rgba(var(--RGB_shadow), 0.2);
 }
 
 .btn-primary:disabled,
 .btn-primary.disabled,
 .btn-primary[aria-disabled='true'] {
-  color: rgba(var(--text-white), 0.8);
+  color: rgba(var(--RGB_text-white), 0.8);
   background-color: var(--bg-disabled);
-  border-color: rgba(var(--black), 0.1);
+  border-color: rgba(var(--RGB_black), 0.1);
   box-shadow: var(--box-shadow);
 }
 
 .btn-primary:focus,
 .btn-primary.focus {
-  box-shadow: 0 0 0 3px rgba(var(--bg-default), 0.4);
+  box-shadow: 0 0 0 3px rgba(var(--RGB_bg-default), 0.4);
 }
 
 .btn-primary .Counter {
   color: inherit;
-  background-color: rgba(var(--bg-white), 0.2);
+  background-color: rgba(var(--RGB_bg-white), 0.2);
 }
 
 .btn-primary .octicon {
-  color: rgba(var(--text-white), 0.8);
+  color: rgba(var(--RGB_text-white), 0.8);
 }
 
 
@@ -1230,13 +1256,13 @@ Box shadows */
 [open]>.btn-danger {
   color: var(--text-white);
   background-color: var(--red-600);
-  border-color: rgba(var(--black), 0.15);
-  box-shadow: 0 1px 0 rgba(var(--black), 0.1), inset 0 1px 0 rgba(var(--white), 0.03);
+  border-color: rgba(var(--RGB_black), 0.15);
+  box-shadow: 0 1px 0 rgba(var(--RGB_black), 0.1), inset 0 1px 0 rgba(var(--RGB_white), 0.03);
 }
 
 .btn-danger:hover .Counter,
 [open]>.btn-danger .Counter {
-  background-color: rgba(var(--bg-white), 0.2);
+  background-color: rgba(var(--RGB_bg-white), 0.2);
 }
 
 .btn-danger:hover .octicon,
@@ -1249,14 +1275,14 @@ Box shadows */
 .btn-danger[aria-selected='true'] {
   color: var(--text-white);
   background-color: var(--red-600);
-  border-color: rgba(var(--black), 0.15);
-  box-shadow: inset 0 1px 0 rgba(var(--red-900), 0.2);
+  border-color: rgba(var(--RGB_black), 0.15);
+  box-shadow: inset 0 1px 0 rgba(var(--RGB_red-900), 0.2);
 }
 
 .btn-danger:disabled,
 .btn-danger.disabled,
 .btn-danger[aria-disabled='true'] {
-  color: rgba(var(--text-red), 0.5);
+  color: rgba(var(--RGB_text-red), 0.5);
   background-color: var(--bg-gray-light);
   border-color: var(--border-color-button);
   box-shadow: var(--box-shadow), var(--box-shadow-highlight);
@@ -1265,16 +1291,16 @@ Box shadows */
 .btn-danger:disabled .Counter,
 .btn-danger.disabled .Counter,
 .btn-danger[aria-disabled='true'] .Counter {
-  background-color: rgba(var(--text-red), 0.05);
+  background-color: rgba(var(--RGB_text-red), 0.05);
 }
 
 .btn-danger:focus {
-  box-shadow: 0 0 0 3px rgba(var(--red-600), 0.4);
+  box-shadow: 0 0 0 3px rgba(var(--RGB_red-600), 0.4);
 }
 
 .btn-danger .Counter {
   color: inherit;
-  background-color: rgba(var(--text-red), 0.1);
+  background-color: rgba(var(--RGB_text-red), 0.1);
 }
 
 
@@ -1288,13 +1314,13 @@ Box shadows */
 [open]>.btn-outline {
   color: var(--text-white);
   background-color: var(--blue-500);
-  border-color: rgba(var(--black), 0.15);
-  box-shadow: 0 1px 0 rgba(var(--black), 0.1), inset 0 1px 0 rgba(var(--white), 0.03);
+  border-color: rgba(var(--RGB_black), 0.15);
+  box-shadow: 0 1px 0 rgba(var(--RGB_black), 0.1), inset 0 1px 0 rgba(var(--RGB_white), 0.03);
 }
 
 .btn-outline:hover .Counter,
 [open]>.btn-outline .Counter {
-  background-color: rgba(var(--bg-white), 0.2);
+  background-color: rgba(var(--RGB_bg-white), 0.2);
 }
 
 .btn-outline:hover .octicon,
@@ -1307,14 +1333,14 @@ Box shadows */
 .btn-outline[aria-selected='true'] {
   color: var(--text-white);
   background-color: var(--blue-500);
-  border-color: rgba(var(--black), 0.15);
-  box-shadow: inset 0 1px 0 rgba(var(--blue-900), 0.2);
+  border-color: rgba(var(--RGB_black), 0.15);
+  box-shadow: inset 0 1px 0 rgba(var(--RGB_blue-900), 0.2);
 }
 
 .btn-outline:disabled,
 .btn-outline.disabled,
 .btn-outline[aria-disabled='true'] {
-  color: rgba(var(--blue-500), 0.5);
+  color: rgba(var(--RGB_blue-500), 0.5);
   background-color: var(--bg-gray-light);
   border-color: var(--border-color-button);
   box-shadow: var(--box-shadow), var(--box-shadow-highlight);
@@ -1323,16 +1349,16 @@ Box shadows */
 .btn-outline:disabled .Counter,
 .btn-outline.disabled .Counter,
 .btn-outline[aria-disabled='true'] .Counter {
-  background-color: rgba(var(--blue-500), 0.05);
+  background-color: rgba(var(--RGB_blue-500), 0.05);
 }
 
 .btn-outline:focus {
-  box-shadow: 0 0 0 3px rgba(var(--blue-500), 0.4);
+  box-shadow: 0 0 0 3px rgba(var(--RGB_blue-500), 0.4);
 }
 
 .btn-outline .Counter {
   color: inherit;
-  background-color: rgba(var(--blue-500), 0.1);
+  background-color: rgba(var(--RGB_blue-500), 0.1);
 }
 
 
@@ -1349,7 +1375,7 @@ Box shadows */
 
 .btn-blue:focus,
 .btn-blue.focus {
-  box-shadow: 0 0 0 0.2em rgba(var(--blue-500), 0.4);
+  box-shadow: 0 0 0 0.2em rgba(var(--RGB_blue-500), 0.4);
 }
 
 .btn-blue:hover,
@@ -1375,7 +1401,7 @@ Box shadows */
 .btn-blue:disabled,
 .btn-blue.disabled,
 .btn-blue[aria-disabled='true'] {
-  color: rgba(var(--text-white), 0.75);
+  color: rgba(var(--RGB_text-white), 0.75);
   background-color: var(--blue-500);
   background-image: none;
   border-color: var(--border-color-button);
@@ -1397,7 +1423,7 @@ Box shadows */
 
 .btn-blue:focus,
 .btn-blue.focus {
-  box-shadow: 0 0 0 0.2em rgba(var(--blue-500), 0.4);
+  box-shadow: 0 0 0 0.2em rgba(var(--RGB_blue-500), 0.4);
 }
 
 .btn-blue:hover,
@@ -1423,7 +1449,7 @@ Box shadows */
 .btn-blue:disabled,
 .btn-blue.disabled,
 .btn-blue[aria-disabled='true'] {
-  color: rgba(var(--text-white), 0.75);
+  color: rgba(var(--RGB_text-white), 0.75);
   background-color: var(--blue-500);
   background-image: none;
   border-color: var(--border-color-button);
@@ -1604,7 +1630,7 @@ of one visual button, but separated by rules to be separate. */
 .btn-link:disabled:hover,
 .btn-link[aria-disabled='true'],
 .btn-link[aria-disabled='true']:hover {
-  color: rgba(var(--gray-600), 0.5);
+  color: rgba(var(--RGB_gray-600), 0.5);
   cursor: default;
 }
 
@@ -1866,7 +1892,7 @@ textarea.form-control {
 .input-dark.focus,
 .input-dark:focus {
   border-color: var(--black-fade-30);
-  box-shadow: 0 0 0 0.2em rgba(var(--blue-300), 0.4);
+  box-shadow: 0 0 0 0.2em rgba(var(--RGB_blue-300), 0.4);
 }
 
 
@@ -2659,7 +2685,7 @@ Apply `.select` to any `<select>` element for custom styles. */
 }
 
 .markdown-body table tr:nth-child(2n) {
-  background-color: --bg-gray;
+  background-color: var(--bg-gray);
 }
 
 .markdown-body table img {
@@ -2782,7 +2808,7 @@ Apply `.select` to any `<select>` element for custom styles. */
   padding: 0.2em 0.4em;
   margin: 0;
   font-size: 85%;
-  background-color: rgba(var(--black), 0.05);
+  background-color: rgba(var(--RGB_black), 0.05);
   border-radius: var(--border-radius);
 }
 
@@ -2810,7 +2836,7 @@ Apply `.select` to any `<select>` element for custom styles. */
 }
 
 .markdown-body .highlight {
-  margin-bottom: --spacer-3;
+  margin-bottom: var(--spacer-3);
 }
 
 .markdown-body .highlight pre {
@@ -2929,38 +2955,38 @@ Apply `.select` to any `<select>` element for custom styles. */
 /* Color variations */
 .flash {
   background-color: var(--blue-100);
-  border-color: rgba(var(--blue-700), 0.2);
+  border-color: rgba(var(--RGB_blue-700), 0.2);
 }
 
 .flash .octicon {
-  color: rgba(var(--blue-700), 0.6);
+  color: rgba(var(--RGB_blue-700), 0.6);
 }
 
 .flash-warn {
   background-color: var(--yellow-100);
-  border-color: rgba(var(--yellow-800), 0.2);
+  border-color: rgba(var(--RGB_yellow-800), 0.2);
 }
 
 .flash-warn .octicon {
-  color: rgba(var(--yellow-800), 1);
+  color: rgba(var(--RGB_yellow-800), 1);
 }
 
 .flash-error {
   background-color: #ffe3e6;
-  border-color: rgba(var(--red-800), 0.2);
+  border-color: rgba(var(--RGB_red-800), 0.2);
 }
 
 .flash-error .octicon {
-  color: rgba(var(--red-800), 0.6);
+  color: rgba(var(--RGB_red-800), 0.6);
 }
 
 .flash-success {
   background-color: var(--bg-green-light);
-  border-color: rgba(var(--green-700), 0.2);
+  border-color: rgba(var(--RGB_green-700), 0.2);
 }
 
 .flash-success .octicon {
-  color: rgba(var(--green-700), 0.8);
+  color: rgba(var(--RGB_green-700), 0.8);
 }
 
 /* Layout variations */
@@ -3100,7 +3126,7 @@ the buttons to be floated or inline-block. */
 }
 
 .Popover-message::before {
-  top: -var(--spacer-3);
+  top: calc(var(--spacer-3) * -1);
   margin-left: -9px;
   border: var(--spacer-2) var(--border-style) transparent;
   border-bottom-color: var(--border-black-fade);
@@ -3108,7 +3134,7 @@ the buttons to be floated or inline-block. */
 
 .Popover-message::after {
   top: -14px;
-  margin-left: -var(--spacer-2);
+  margin-left: calc(var(--spacer-2) * -1);
   border: 7px var(--border-style) transparent;
   border-bottom-color: var(--bg-white);
 }
@@ -3128,7 +3154,7 @@ the buttons to be floated or inline-block. */
 .Popover-message--bottom::before,
 .Popover-message--bottom-right::before,
 .Popover-message--bottom-left::before {
-  bottom: -var(--spacer-3);
+  bottom: calc(var(--spacer-3) * -1);
   border-top-color: var(--border-black-fade);
 }
 
@@ -3220,7 +3246,7 @@ the buttons to be floated or inline-block. */
 .Popover-message--left::after,
 .Popover-message--left-top::after,
 .Popover-message--left-bottom::after {
-  margin-top: -var(--spacer-2);
+  margin-top: calc(var(--spacer-2) * -1);
 }
 
 
@@ -3228,7 +3254,7 @@ the buttons to be floated or inline-block. */
 .Popover-message--right::before,
 .Popover-message--right-top::before,
 .Popover-message--right-bottom::before {
-  right: -var(--spacer-3);
+  right: calc(var(--spacer-3) * -1);
   border-left-color: var(--border-black-fade);
 }
 
@@ -3244,7 +3270,7 @@ the buttons to be floated or inline-block. */
 .Popover-message--left::before,
 .Popover-message--left-top::before,
 .Popover-message--left-bottom::before {
-  left: -var(--spacer-3);
+  left: calc(var(--spacer-3) * -1);
   border-right-color: var(--border-black-fade);
 }
 
