--- a/src/stylesheets/themes/hugo-terminal-orange.css
+++ b/src/stylesheets/themes/hugo-terminal-orange.css
@@ -1,15 +1,21 @@
-[theme='hugo-terminal-orange'] {
+[theme='hugo-terminal-orange'],
+::before,
+::after {
   --orange: rgb(255, 168, 106);
   --orange-200: #ffd1ac;
   --gray-000: #181818;
   --gray-100: #2b303b;
   --gray-200: #24292e;
+  --RGB_gray-200: 36, 41, 46;
   --gray-300: #4e4c4b;
   --gray-400: #586069;
+  --RGB_gray-400: 88, 96, 105;
   --gray-600: #bbbbbb;
+  --RGB_gray-600: 187, 187, 187;
   --gray-700: #959da5;
   --gray-900: #24292e;
   --bg-white: #222129;
+  --RGB_bg-white: 34, 33, 41;
   --bg-gray: var(--gray-100);
   --bg-gray-light: var(--bg-gray);
   --border-gray: var(--gray-300);
