fix: 修复伪类变量错误、.Popover-message 边框颜色

--- a/src/stylesheets/primer.css
+++ b/src/stylesheets/primer.css
@@ -3155,7 +3155,7 @@ the buttons to be floated or inline-block. */
 .Popover-message--bottom-right::before,
 .Popover-message--bottom-left::before {
   bottom: calc(var(--spacer-3) * -1);
-  border-top-color: var(--border-black-fade);
+  border-top-color: var(--border-color);
 }
 
 .Popover-message--bottom::after,
