--- a/src/stylesheets/themes/dark-blue.css
+++ b/src/stylesheets/themes/dark-blue.css
@@ -1,6 +1,6 @@
 [theme='dark-blue'],
-::before,
-::after {
+[theme='dark-blue'] ::before,
+[theme='dark-blue'] ::after {
   --gray-000: #181818;
   --gray-100: #222;
   --gray-200: #24292e;
