--- a/src/stylesheets/themes/github-dark.css
+++ b/src/stylesheets/themes/github-dark.css
@@ -1,6 +1,6 @@
 [theme='github-dark'],
-::before,
-::after {
+[theme='github-dark'] ::before,
+[theme='github-dark'] ::after {
   --gray-000: #181818;
   --gray-100: #222;
   --gray-200: #24292e;
