--- a/src/stylesheets/zigzag.css
+++ b/src/stylesheets/zigzag.css
@@ -1,6 +1,6 @@
-:root,
-::before,
-::after {
+.zigzag,
+.zigzag::before,
+.zigzag::after {
   --zz-height: 16px;
   --zz-halfheight: calc(var(--zz-height) / 2);
   --zz-thickness: 110%;
