feat: footnotes 样式与 github 同步

--- a/src/stylesheets/primer.css
+++ b/src/stylesheets/primer.css
@@ -2894,6 +2894,10 @@ Apply `.select` to any `<select>` element for custom styles. */
   border-top: 0;
 }
 
+.markdown-body .footnotes .data-footnote-backref g-emoji {
+  font-family: monospace;
+}
+
 /* ******************************** alerts ******************************** */
 /* Default flash */
 .flash {
