--- a/src/stylesheets/util.css
+++ b/src/stylesheets/util.css
@@ -15,6 +15,22 @@
   -webkit-overflow-scrolling: touch;
 }
 
+g-emoji {
+  font-weight: 400;
+  font-family: "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  word-wrap: normal;
+  border: 0;
+}
+
 .details-popover {
   position: relative;
 }
