fix: 修正颜色错误

--- a/src/stylesheets/github-syntax.css
+++ b/src/stylesheets/github-syntax.css
@@ -42,12 +42,12 @@
   --syntax-color-2: #c8e1ff;
   --syntax-color-3: #b392f0;
   --syntax-color-4: #f6f8fa;
-  --syntax-color-5: #959da5;
-  --syntax-color-6: #7bcc72;
-  --syntax-color-7: #ea4a5a;
-  --syntax-color-8: #79b8ff;
-  --syntax-color-9: #fb8532;
-  --syntax-color-10: #d73a49;
+  --syntax-color-5: #7bcc72;
+  --syntax-color-6: #ea4a5a;
+  --syntax-color-7: #79b8ff;
+  --syntax-color-8: #fb8532;
+  --syntax-color-9: #d73a49;
+  --syntax-color-10: #fafbfc;
   --syntax-color-11: #d73a49;
   --syntax-color-12: #fafbfc;
   --syntax-color-13: #d73a49;
