--- a/src/stylesheets/themes/dark-blue.css
+++ b/src/stylesheets/themes/dark-blue.css
@@ -11,7 +11,7 @@
   --gray-600: #7b7b7b;
   --RGB_gray-600: 123, 123, 123;
   --gray-700: #959da5;
-  --bg-white: #1e232b;
+  --bg-white: #14171c;
   --RGB_bg-white: 30, 35, 43;
   --bg-gray: var(--bg-white);
   --bg-gray-light: var(--bg-gray);
