--- a/src/stylesheets/themes/photon-dark.css
+++ b/src/stylesheets/themes/photon-dark.css
@@ -3,8 +3,8 @@
 [theme='photon-dark'] ::after {
   --gray-000: #0c0c0d;
   --gray-100: #0c0c0d;
-  --gray-200: #2a2a2e;
-  --RGB_gray-200: 42, 42, 46;
+  --gray-200: #232326;
+  --RGB_gray-200: 35, 35, 38;
   --gray-300: #38383d;
   --gray-400: #4a4a4f;
   --RGB_gray-400: 74, 74, 79;
@@ -13,7 +13,7 @@
   --gray-700: #b1b1b3;
   --bg-white: var(--gray-200);
   --RGB_bg-white: var(--RGB_gray-200);
-  --bg-gray: var(--gray-200);
+  --bg-gray: #2a2a2e;
   --bg-gray-light: var(--bg-gray);
   --border-gray: var(--gray-300);
   --border-gray-dark: var(--border-gray);
