--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,7 +1,15 @@
 @import './primer.css';
-@import './util.css';
-@import './timeline.css';
-@import './timeline-comment.css';
+@import './base.css';
+@import './github-syntax.css';
+
+/* themes */
+@import './themes/classic-dark.css';
+@import './themes/dark-blue.css';
+@import './themes/github-dark.css';
+@import './themes/github-dark-orange.css';
+@import './themes/hugo-terminal-orange.css';
+@import './themes/icy-dark.css';
+@import './themes/photon-dark.css';
 
 /* 如果为 600 emoji 将会失去颜色 */
 .g-emoji {
