fix: add License

--- a/src/stylesheets/primer.css
+++ b/src/stylesheets/primer.css
@@ -1,3 +1,10 @@
+/*! This file contains adapted styles from the Primer CSS
+ * design system, original styles licensed under:
+ * MIT License
+ * Copyright (c) 2021 GitHub Inc.
+ * https://github.com/primer/css/blob/main/LICENSE
+ */
+
 /* support
    ========================================================================== */
 :root,
