--- a/src/stylesheets/github-syntax.css
+++ b/src/stylesheets/github-syntax.css
@@ -70,6 +70,11 @@
   --syntax-color-30: #79b8ff;
 }
 
+/*!
+ * GitHub Light v0.5.0
+ * Copyright (c) 2012 - 2017 GitHub, Inc.
+ * Licensed under MIT (https://github.com/primer/github-syntax-theme-generator/blob/master/LICENSE)
+ */
 
 .pl-c
 
