--- a/src/stylesheets/primer.css
+++ b/src/stylesheets/primer.css
@@ -5,6 +5,26 @@
  * https://github.com/primer/css/blob/main/LICENSE
  */
 
+/**
+  * 目录
+  *
+  * support
+  * base
+  * HTML5 display definitions
+  * Links
+  * Text-level semantics
+  * Embedded content
+  * Grouping content
+  * Forms
+  * utilities
+  * buttons
+  * forms
+  * markdown
+  * alerts
+  * navigation
+  * popover
+  */
+
 /* support
    ========================================================================== */
 :root,
