--- a/src/stylesheets/themes/photon-dark.css
+++ b/src/stylesheets/themes/photon-dark.css
@@ -4,15 +4,12 @@
   --gray-000: #0c0c0d;
   --gray-100: #0c0c0d;
   --gray-200: #232326;
-  --RGB_gray-200: 35, 35, 38;
+  --border-shadow-color: rgba(35, 35, 38, 0.2);
   --gray-300: #38383d;
   --gray-400: #4a4a4f;
-  --RGB_gray-400: 74, 74, 79;
   --gray-600: #737373;
-  --RGB_gray-600: 115, 115, 115;
   --gray-700: #b1b1b3;
   --bg-white: var(--gray-200);
-  --RGB_bg-white: var(--RGB_gray-200);
   --bg-gray: #2a2a2e;
   --bg-gray-light: var(--bg-gray);
   --border-gray: var(--gray-300);
